Separated css and html

--- a/SheCodes Basics final project v3.html
+++ b/SheCodes Basics final project v3.html
@@ -1,102 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get baking | Weekend cookies 🍪</title>
-    <style>
-      body {
-        background: linear-gradient(
-          180deg,
-          rgb(164, 80, 139),
-          rgb(95, 10, 135)
-        );
-        font-family: Helvetica, sans-serif;
-      }
-
-      h1 {
-        font-size: 40px;
-        font-weight: 900;
-      }
-
-      h1, .weekDay {
-      line-height: 60px;
-      }
-
-      h3, button {
-        font-size: 20px;
-      }
-
-      img {
-        max-width: 100%;
-      }
-
-      img, .weekDay {
-        border-radius: 10px;
-      }
-
-      button {
-        background: rgb(95, 10, 135);
-        border: none;
-        padding: 15px 35px 20px 30px;
-        cursor: pointer;
-        transition: all 100ms ease-in-out;
-      }
-
-      button:hover {
-        opacity: 0.8;
-      }
-
-      button, .weekDay, .footer, .footerLink {
-        color: white;
-      }
-
-      button, .container {
-        border-radius: 30px;
-        margin: 20px auto;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-      }
-
-      .container {
-        display: block;
-        max-width: 550px;
-        padding: 20px 80px;
-        background: white;
-      }
-
-      .container, .weekDay, .footer {
-        text-align: center;
-      }
-
-      .weekDay {
-        background: #0b977b;
-        padding: 15px 30px;
-        font-weight: 100;
-        font-size: 25px;
-        width: auto;
-        margin: auto;
-      }
-
-      .recipeName {
-        color: rgb(164, 80, 139);
-        font-weight: bold;
-      }
-
-      .inTextLinks {
-        color: #8b104e;
-      }
-
-      .footer {
-        font-family: monospace;
-      }
-
-      .inTextLinks, .footer {
-        font-size: 14px;
-      }
-
-    </style>
-  </head>
+      </head>
   <body>
     <div class="container">
       <h1>Get baking this weekend</h1>
